--- a/index.html
+++ b/index.html
@@ -42,67 +42,67 @@
     {
       image: "thumb31.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb32.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb33.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb34.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb35.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb36.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb37.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb38.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb39.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb40.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb41.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb42.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb43.jpg",
       title: " ",
-      caption: " "
+      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
     },
     {
       image: "thumb19.jpg",
@@ -167,72 +167,72 @@
     {
       image: "thumb12.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。"
     },
     {
       image: "thumb13.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。"
     },
     {
       image: "thumb14.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。"
     },
     {
       image: "thumb16.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。"
     },
     {
       image: "thumb17.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。"
     },
     {
       image: "thumb18.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。"
     },
     {
       image: "thumb44.jpg",
       title: "toothpicks",
-      caption: "2021"
+      caption: "2021,爪楊枝<br>床に爪楊枝の先端を突き立て倒し、その先に次の爪楊枝を倒す、という行為をなん度も繰り返した。"
     },
     {
       image: "thumb45.jpg",
       title: "toothpicks",
-      caption: "2021"
+      caption: "2021,爪楊枝<br>床に爪楊枝の先端を突き立て倒し、その先に次の爪楊枝を倒す、という行為をなん度も繰り返した。"
     },
     {
       image: "thumb46.jpg",
       title: "toothpicks",
-      caption: "2021"
+      caption: "2021,爪楊枝<br>床に爪楊枝の先端を突き立て倒し、その先に次の爪楊枝を倒す、という行為をなん度も繰り返した。"
     },
     {
       image: "thumb3.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
     },
     {
       image: "thumb4.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
     },
     {
       image: "thumb5.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
     },
     {
       image: "thumb6.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
     },
     {
       image: "thumb7.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
     },
     {
       image: "thumb8.jpg",
@@ -262,22 +262,22 @@
     {
       image: "thumb49.jpg",
       title: "stamp_30cm",
-      caption: "2020"
+      caption: "2020,wood panel,acrylic paint<br>黒のアクリル絵の具に浸した水糸をパネル上に下ろして素早く引き上げ糸の形を残した。"
     },
     {
       image: "thumb50.jpg",
       title: "stamp_50cm",
-      caption: "2020"
+      caption: "2020,wood panel,acrylic paint<br>黒のアクリル絵の具に浸した水糸をパネル上に下ろして素早く引き上げ糸の形を残した。"
     },
     {
       image: "thumb47.jpg",
       title: "Lines",
-      caption: "2020"
+      caption: "2020,acrylic boards,threads<br>　格子状に組んだアクリル板と木製パネルに穴を開け糸を張った。"
     },
     {
       image: "thumb48.jpg",
       title: "Lines",
-      caption: "2020"
+      caption: "2020,acrylic boards,threads<br>　格子状に組んだアクリル板と木製パネルに穴を開け糸を張った。"
     },
     {
       image: "thumb2.jpg",
