--- a/index.html
+++ b/index.html
@@ -42,67 +42,67 @@
     {
       image: "thumb31.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb32.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb33.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb34.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb35.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb36.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb37.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb38.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb39.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb40.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb41.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb42.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb43.jpg",
       title: " ",
-      caption: "2025,plaster<br>市販品のブリスターパックを型として石膏取りをした。 "
+      caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
       image: "thumb19.jpg",
