--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <main>
     <div style="padding: 100px;">
       <p>e-meil</p>
-      <p>kahokonakayama@gmail.com</p>
+      <p>nakayamakahoko@gmail.com</p>
       <br>
       <p><a href="https://twitter.com/">Twitter</a></p>
       <p><a href="https://instagram.com/">Instagram</a></p>
