--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
   <main>
     <div style="padding: 100px;">
       <p>e-meil</p>
-      <p>nakayamakahoko@gmail.com</p>
+      <p>nkymkhk@gmail.com</p>
       <br>
-      <p><a href="https://twitter.com/">Twitter</a></p>
-      <p><a href="https://instagram.com/">Instagram</a></p>
+      <p><a href="https://x.com/barbar440">X</a></p>
+      <p><a href="https://www.instagram.com/kahokonakayama/">Instagram</a></p>
     </div>
   </main>
 
