--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
       caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
     },
     {
+      image: "thumb7-2.JPG",
+      title: "poly bag fauna",
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
+    },
+    {
+      image: "thumb7-3.JPG",
+      title: "poly bag fauna",
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させた。"
+    },
+    {
       image: "thumb8.jpg",
       title: "squares",
       caption: "2021　180×180mm（100組）acrylic paint on canvas<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。<br>誘導役を100人に依頼。100個の歪んだ形が生まれた。"
