--- a/index.html
+++ b/index.html
@@ -105,6 +105,31 @@
       caption: "2025,plaster<br>市販品のブリスターパックを型に石膏取りをした。 "
     },
     {
+      image: "thumb51.jpg",
+      title: "roly-poly eggs",
+      caption: "2024,egg shell,urethane foam,lead pellets<br>卵殻に鉛と発報ウレタンを詰めて重心をずらした。 "
+    },
+    {
+      image: "thumb52.jpg",
+      title: "roly-poly eggs",
+      caption: "2024,egg shell,urethane foam,lead pellets<br>卵殻に鉛と発報ウレタンを詰めて重心をずらした。 "
+    },
+    {
+      image: "thumb53.jpg",
+      title: "roly-poly eggs",
+      caption: "2024,egg shell,urethane foam,lead pellets<br>卵殻に鉛と発報ウレタンを詰めて重心をずらした。 "
+    },
+    {
+      image: "thumb54.jpg",
+      title: "roly-poly eggs",
+      caption: "2024,egg shell,urethane foam,lead pellets<br>卵殻に鉛と発報ウレタンを詰めて重心をずらした。 "
+    },
+    {
+      image: "thumb55.jpg",
+      title: "roly-poly eggs",
+      caption: "2024,egg shell,urethane foam,lead pellets<br>卵殻に鉛と発報ウレタンを詰めて重心をずらした。 "
+    },
+    {
       image: "thumb19.jpg",
       title: "sunlight",
       caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
