--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="NAKAYAMA Kahoko - Portfolio site. Exploring forms emerging from materials and structures.">
+  <meta name="description" content="NAKAYAMA Kahoko - 中山佳保子。造形作家。素材や構造のふるまいから形を導き出す作品を中心に発表。作品・展示情報・プロフィールを掲載。">
   <meta name="keywords" content="art, portfolio, contemporary art, material, structure">
   <title>works</title>
   <link rel="stylesheet" href="style.css" />
