--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <main>
     <div style="padding: 100px;">
       <p>e-meil</p>
-      <p>nkymkhk@gmail.com</p>
+      <p><a href="mailto:nkymkhk@gmail.com">nkymkhk@gmail.com</a></p>
       <br>
       <p><a href="https://x.com/barbar440">X</a></p>
       <p><a href="https://www.instagram.com/kahokonakayama/">Instagram</a></p>
