--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     {
       image: "thumb1-2.jpg",
       title: "plastic dan-pole",
-      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。<br><p><a href="https://vimeo.com/944677242?fl=pl&fe=sh</a></p>"
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。<br>https://vimeo.com/944677242?fl=pl&fe=sh"
     }
   ];
 
