--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <p>e-meil</p>
       <p><a href="mailto:nkymkhk@gmail.com">nkymkhk@gmail.com</a></p>
       <br>
-      <p><a href="https://x.com/barbar440">X</a></p>
+      <p><a href="https://x.com/@nkymkhk">X</a></p>
       <p><a href="https://www.instagram.com/kahokonakayama/">Instagram</a></p>
     </div>
   </main>
