--- a/exhibition.html
+++ b/exhibition.html
@@ -22,6 +22,22 @@
 
   <main>
     <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
+      <img src="exhibition10.jpg" alt="exhibition 1" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
+        <p>「助教・助手展2025　武蔵野美術大学助教･助手研究発表」</p>
+        <p>会期：2025年11月24日（月）-12月21日（日）</p>
+        <p>会場：武蔵野美術⼤学美術館</p>
+        <p>開館時間：11:00–19:00（⼟・⽇曜⽇は10:00–17:00）</p>
+　　　　　<p>休館⽇：⽔曜⽇</p>
+　　　　　<p>入館料：無料</p>
+　　　　　<p>主催：武蔵野美術⼤学 美術館･図書館</p>
+　　　　　<p>企画：助教・助手展2025運営委員会</p>
+　　　　　<p>https://mauml.musabi.ac.jp/museum/</p>
+      </div>
+    </div>
+
+  <main>
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition1.jpg" alt="exhibition 1" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>武蔵野美術大学 助教・助手展 2024</p>
